Readability improvements